fixed alignment of single post article

--- a/css/single.css
+++ b/css/single.css
@@ -71,6 +71,7 @@ h1{
 
 img.wp-post-image {
 	margin: 1em 0;
+	width: 100%;
 }
 
 
